# binpicking

./: README.md
RealTimeControl/: Monitoring.cc  README.md  control_funcional_v3.cc
vision_pickplace/cam_server/: CMakeLists.txt  cam_server.cpp
vision_pickplace/kuka/: PICK_BOX.src  VISIONSRV.xml
vision_pickplace/vision_server/: camera_client.py  config.yaml  main.py  pose.py
vision_pickplace/webui/: app.js  index.html
